# ADVANCED-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/v1/: injgestion.py  retrival.py
backend/core/: config.py  cross_encoder_client.py  embedding_client.py  llm_client.py  redis_client.py  tavily_client.py
backend/core/db/: weaviate_client.py
backend/graphs/ingestion/: graph.py  state.py
backend/graphs/ingestion/nodes/: chunk_node.py  contextual_retrival.py  embed.py
backend/graphs/retrival/: graph.py  state.py
backend/graphs/retrival/nodes/: orchestrator.py
backend/graphs/retrival/tools/: retrival.py  summarizer.py  web_search.py
backend/models/: ingestion.py  retrival.py
backend/services/ingestion/: ingestion.py  loader.py  vector_store.py
backend/services/retrival/: chunks_retrival.py  conversation.py  embedding_service.py  reranking.py  retrival.py
backend/utils/: decorators.py
notebooks/: contextual_retrival.ipynb  preprocesesing.ipynb  retrival.ipynb  weviate_connect.ipynb
