[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.1",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "voyageai>=0.3.7",
    "weaviate-client>=4.18.3",
]
